# MSHTlib

./: MANIFEST.in  README.md  create_base_architecture.py  pyproject.toml  requirements.txt  scripts.py  setup.py
architecture/: __init__.py  create_base_architecture.py  create_scripts.py  create_src.py  create_tests.py
architecture/scripts/bash/: local_ci.sh
architecture/scripts/cmd/: local_ci.cmd
mshtlib/: common_constants.py  const.py  scripts.py
mshtlib/architecture/: __init__.py  component.py  create_base_architecture.py  create_scripts.py  scripts.py  settings.py  src.py  tests.py
mshtlib/architecture/component_template/: test_example_component.py
mshtlib/architecture/component_template/component/: component.py  predicates.py
mshtlib/architecture/scripts/powershell/: local_ci.psi
mshtlib/architecture/src_template/common/const/: paths.py
mshtlib/architecture/src_template/common/logger/: __init__.py  const.py  handlers.py  paths.py
mshtlib/architecture/src_template/core/: component_builder.py
mshtlib/architecture/src_template/server/: __init__.py  __main__.py  app.py  const.py  routes.py
mshtlib/architecture/src_template/server/configs/: __init__.py  config_model.py  tools.py
mshtlib/kedro_shell/: component.py  component_builder.py  context.py  kedro_mls.py  logger_configurator.py  params_parser.py  params_validation.py
mshtlib/kedro_shell/const/: kedro.py  params.py
mshtlib/kedro_shell/predicates/: __init__.py  exceptions.py  predicates.py  special.py
