[tool.poetry]
name = "mshtlib"
version = "0.1.0"
description = ""
authors = ["Fortie <miraakbs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^7.5.1"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
